// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionSplit> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-grid-gap xui-composition-has-auto-space-around xui-composition-auto-template xui-composition-split"
>
  <div
    className="xui-gridarea-primary"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionSplit> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-grid-gap xui-composition-has-auto-space-around xui-composition-auto-template xui-composition-split"
>
  <div
    className="xui-gridarea-primary"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionSplit> should include custom class and toggle off default classes, if specified 1`] = `
<div
  className="xui-composition xui-composition-auto-template xui-composition-split split-without-head"
>
  <div
    className="xui-gridarea-primary"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionSplit> should include layout restriction class, if specified 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-grid-gap xui-composition-has-auto-space-around xui-composition-split-retain-small xui-composition-split"
>
  <div
    className="xui-gridarea-primary"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;
